frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/homehearing.scss
.home-view-hearing-container {
  display: flex;
  border-top: 1px #e8e8e8 solid;
  width: 100vw;
  /* Adjust the gap between left-side and right-side if needed */
}

.left-side {
  width: 70vw;
  padding: 48px 64px;
  flex: 5;

  tr:hover {
    td {
      .case-name-on-hover {
        font-weight: 700;
      }
    }
  }
}

.right-side {
  width: 30vw;
  /* Adjust flex ratio as needed */
  background-color: #fff;
  margin-left: 16px;
}

.header-wrapper {
  padding-top: 16px;
  /* Adjust the padding as needed */
}

.search-tabs-container .search-tab-head-selected {
  color: theme(digitv2.lightTheme.primary) !important;
  border: solid theme(digitv2.lightTheme.primary) !important;
  border-width: 1px 1px 4px !important;
}

